--- a/Project 1 Data Sandy.ipynb
+++ b/Project 1 Data Sandy.ipynb
@@ -135,6 +135,7 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Housing Month</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -146,7 +147,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.810959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -155,7 +157,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-3.808219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -164,7 +167,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-2.808219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -173,7 +177,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-1.808219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -182,7 +187,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-0.808219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -196,12 +202,12 @@
        "3 2011-01-01               172.63     Sandy     2012-10-22  Cape May, NJ   \n",
        "4 2012-01-01               169.49     Sandy     2012-10-22  Cape May, NJ   \n",
        "\n",
-       "      Delta  \n",
-       "0 -4.810959  \n",
-       "1 -3.808219  \n",
-       "2 -2.808219  \n",
-       "3 -1.808219  \n",
-       "4 -0.808219  "
+       "   Housing Month  Delta  \n",
+       "0              1     -4  \n",
+       "1              1     -3  \n",
+       "2              1     -2  \n",
+       "3              1     -1  \n",
+       "4              1      0  "
       ]
      },
      "execution_count": 3,
@@ -353,6 +359,7 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Housing Auth Month</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -364,7 +371,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-6.810959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -373,7 +381,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-5.810959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -382,7 +391,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.810959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -391,7 +401,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-3.808219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -400,7 +411,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-2.808219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -414,12 +426,12 @@
        "3 2009-01-01                                        428     Sandy   \n",
        "4 2010-01-01                                        434     Sandy   \n",
        "\n",
-       "  Hurricane Date      Location     Delta  \n",
-       "0     2012-10-22  Cape May, NJ -6.810959  \n",
-       "1     2012-10-22  Cape May, NJ -5.810959  \n",
-       "2     2012-10-22  Cape May, NJ -4.810959  \n",
-       "3     2012-10-22  Cape May, NJ -3.808219  \n",
-       "4     2012-10-22  Cape May, NJ -2.808219  "
+       "  Hurricane Date      Location  Housing Auth Month  Delta  \n",
+       "0     2012-10-22  Cape May, NJ                   1     -6  \n",
+       "1     2012-10-22  Cape May, NJ                   1     -5  \n",
+       "2     2012-10-22  Cape May, NJ                   1     -4  \n",
+       "3     2012-10-22  Cape May, NJ                   1     -3  \n",
+       "4     2012-10-22  Cape May, NJ                   1     -2  "
       ]
      },
      "execution_count": 5,
@@ -573,6 +585,8 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Real GDP Year</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -584,7 +598,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.810959</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -593,7 +609,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-3.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -602,7 +620,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-2.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -611,7 +631,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-1.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -620,19 +642,28 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-0.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DATE  Real GDP Hurricane Hurricane Date      Location     Delta\n",
-       "0 2008-01-01   5023422     Sandy     2012-10-22  Cape May, NJ -4.810959\n",
-       "1 2009-01-01   4535803     Sandy     2012-10-22  Cape May, NJ -3.808219\n",
-       "2 2010-01-01   4933737     Sandy     2012-10-22  Cape May, NJ -2.808219\n",
-       "3 2011-01-01   4843644     Sandy     2012-10-22  Cape May, NJ -1.808219\n",
-       "4 2012-01-01   4674175     Sandy     2012-10-22  Cape May, NJ -0.808219"
+       "        DATE  Real GDP Hurricane Hurricane Date      Location  Hurricane Year  \\\n",
+       "0 2008-01-01   5023422     Sandy     2012-10-22  Cape May, NJ            2012   \n",
+       "1 2009-01-01   4535803     Sandy     2012-10-22  Cape May, NJ            2012   \n",
+       "2 2010-01-01   4933737     Sandy     2012-10-22  Cape May, NJ            2012   \n",
+       "3 2011-01-01   4843644     Sandy     2012-10-22  Cape May, NJ            2012   \n",
+       "4 2012-01-01   4674175     Sandy     2012-10-22  Cape May, NJ            2012   \n",
+       "\n",
+       "   Real GDP Year  Delta  \n",
+       "0           2008     -4  \n",
+       "1           2009     -3  \n",
+       "2           2010     -2  \n",
+       "3           2011     -1  \n",
+       "4           2012      0  "
       ]
      },
      "execution_count": 7,
@@ -792,6 +823,7 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Unemployment Month</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -803,7 +835,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.810959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -812,7 +845,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.726027</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -821,7 +855,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.646575</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -830,7 +865,8 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.561644</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -839,19 +875,27 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May, NJ</td>\n",
-       "      <td>-4.479452</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DATE  Unemployment Hurricane Hurricane Date      Location     Delta\n",
-       "0 2008-01-01          11.9     Sandy     2012-10-22  Cape May, NJ -4.810959\n",
-       "1 2008-02-01          11.3     Sandy     2012-10-22  Cape May, NJ -4.726027\n",
-       "2 2008-03-01          10.6     Sandy     2012-10-22  Cape May, NJ -4.646575\n",
-       "3 2008-04-01           8.2     Sandy     2012-10-22  Cape May, NJ -4.561644\n",
-       "4 2008-05-01           6.5     Sandy     2012-10-22  Cape May, NJ -4.479452"
+       "        DATE  Unemployment Hurricane Hurricane Date      Location  \\\n",
+       "0 2008-01-01          11.9     Sandy     2012-10-22  Cape May, NJ   \n",
+       "1 2008-02-01          11.3     Sandy     2012-10-22  Cape May, NJ   \n",
+       "2 2008-03-01          10.6     Sandy     2012-10-22  Cape May, NJ   \n",
+       "3 2008-04-01           8.2     Sandy     2012-10-22  Cape May, NJ   \n",
+       "4 2008-05-01           6.5     Sandy     2012-10-22  Cape May, NJ   \n",
+       "\n",
+       "   Unemployment Month  Delta  \n",
+       "0                   1     -4  \n",
+       "1                   2     -4  \n",
+       "2                   3     -4  \n",
+       "3                   4     -4  \n",
+       "4                   5     -4  "
       ]
      },
      "execution_count": 9,
@@ -1003,6 +1047,8 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Median Income Year</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1014,7 +1060,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May</td>\n",
-       "      <td>-4.810959</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1023,7 +1071,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May</td>\n",
-       "      <td>-3.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1032,7 +1082,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May</td>\n",
-       "      <td>-2.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1041,7 +1093,9 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May</td>\n",
-       "      <td>-1.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1050,19 +1104,28 @@
        "      <td>Sandy</td>\n",
        "      <td>2012-10-22</td>\n",
        "      <td>Cape May</td>\n",
-       "      <td>-0.808219</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DATE  Median Hurricane Hurricane Date  Location     Delta\n",
-       "0 2008-01-01   54423     Sandy     2012-10-22  Cape May -4.810959\n",
-       "1 2009-01-01   49797     Sandy     2012-10-22  Cape May -3.808219\n",
-       "2 2010-01-01   51585     Sandy     2012-10-22  Cape May -2.808219\n",
-       "3 2011-01-01   52312     Sandy     2012-10-22  Cape May -1.808219\n",
-       "4 2012-01-01   55175     Sandy     2012-10-22  Cape May -0.808219"
+       "        DATE  Median Hurricane Hurricane Date  Location  Hurricane Year  \\\n",
+       "0 2008-01-01   54423     Sandy     2012-10-22  Cape May            2012   \n",
+       "1 2009-01-01   49797     Sandy     2012-10-22  Cape May            2012   \n",
+       "2 2010-01-01   51585     Sandy     2012-10-22  Cape May            2012   \n",
+       "3 2011-01-01   52312     Sandy     2012-10-22  Cape May            2012   \n",
+       "4 2012-01-01   55175     Sandy     2012-10-22  Cape May            2012   \n",
+       "\n",
+       "   Median Income Year  Delta  \n",
+       "0                2008     -4  \n",
+       "1                2009     -3  \n",
+       "2                2010     -2  \n",
+       "3                2011     -1  \n",
+       "4                2012      0  "
       ]
      },
      "execution_count": 11,
